[WIP] SEtup mpan details screen

--- a/src/app/pages/mpandetails/mpandetails.component.html
+++ b/src/app/pages/mpandetails/mpandetails.component.html
@@ -1,7 +1,7 @@
-<div class="row">
-    <span class="text-info"> MPAN DETAILS</span>
-</div>
-<div class="row">
-    <ngx-mpan-details-form></ngx-mpan-details-form>
-
+<div class="col-md-12">
+    <div class="row">
+        <div class="col-md-12">
+            <ngx-mpan-details-form></ngx-mpan-details-form>
+        </div>
+    </div>
 </div>
