--- a/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.scss
+++ b/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.scss
@@ -1,3 +1,13 @@
-@import '../../../@theme/styles/themes';
-@import '~bootstrap/scss/mixins/breakpoints';
-@import '~@nebular/theme/styles/global/breakpoints';
+
+.form-inline [fullWidth] {
+  flex: 1;
+}
+
+.form-inline > * {
+  margin: 0 1.5rem 1.5rem 0;
+}
+
+nb-card.inline-form-card nb-card-body {
+  padding-bottom: 0;
+}
+
