[WIP] MPAN details screen

--- a/src/app/pages/mpandetails/mpandetails.component.html
+++ b/src/app/pages/mpandetails/mpandetails.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-12">
     <div class="row">
         <div class="col-md-12">
-            <ngx-mpan-details-form></ngx-mpan-details-form>
+            <ngx-mpan-details-form [mpan_id]="MPAN-ID-1234567"></ngx-mpan-details-form>
         </div>
     </div>
 </div>
