[WIP] Main cable details form

--- a/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
+++ b/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
@@ -3,7 +3,7 @@
         <!--MPAN DETAIL CARD-->
         <div class="col-md-12 col-lg-12 col-sm-12">
             <nb-card class="inline-form-card">
-                <nb-card-header>Metering Point Details Screen</nb-card-header>
+                <nb-card-header>METERING POINT DETAILS SCREEN</nb-card-header>
                 <nb-card-body>
                     <form class="form-inline" [formGroup]="form">
                         <div class="col-md-12">
@@ -430,9 +430,3 @@
         </div>
     </div>
 </div>
-
-<!--<div>-->
-<!--<p>-->
-<!--&lt;!&ndash;Value: {{ profileForm.value.firstName }}&ndash;&gt;-->
-<!--</p>-->
-<!--</div>-->
