--- a/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
+++ b/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
@@ -3,7 +3,10 @@
         <!--MPAN DETAIL CARD-->
         <div class="col-md-12 col-lg-12 col-sm-12">
             <nb-card class="inline-form-card">
-                <nb-card-header>METERING POINT DETAILS SCREEN</nb-card-header>
+                <nb-card-header>
+                    METERING POINT DETAILS SCREEN
+                    <h6 class="text-success">  {{ routed_id$ | async}}</h6>
+                </nb-card-header>
                 <nb-card-body>
                     <form class="form-inline" [formGroup]="form">
                         <div class="col-md-12">
@@ -13,7 +16,7 @@
                                     <label class="label col-sm-3 col-form-label">MPAN ID</label>
                                     <div class="col-sm-9">
                                         <input type="text"
-                                               class="input-full-width status-danger size-medium shape-semi-round"
+                                               class="input-full-width status-warning size-medium shape-semi-round"
                                                nbInput fullWidth
                                                placeholder="MPAN ID"
                                                formControlName="mpan_id">
