--- a/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
+++ b/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
@@ -1,5 +1,9 @@
 <div class="col-md-12 col-lg-12 col-sm-12">
     <div class="row">
+        <button (click)="onClickBack()"
+                ghost size="small" status="primary" nbButton> > back</button>
+    </div>
+    <div class="row">
         <!--MPAN DETAIL CARD-->
         <div class="col-md-12 col-lg-12 col-sm-12">
             <nb-card class="inline-form-card">
