--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -3,12 +3,14 @@
         <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
             <nb-icon icon="menu-2-outline"></nb-icon>
         </a>
-        <a class="logo text-info" href="#" (click)="navigateHome()">
-            LDSO<span class="text-primary"> onCloud </span>
-        </a>
     </div>
 </div>
-
+<div class="header-container">
+    <a class="logo text-info" href="#" (click)="navigateHome()">
+        <nb-icon icon="flash-outline" status="success"></nb-icon>
+        LDSO<span class="text-primary">-OnCloud </span>
+    </a>
+</div>
 <div class="header-container">
     <nb-actions size="small">
         <nb-action class="control-item" icon="email-outline"></nb-action>
