--- a/src/app/pages/mpandetails/mpan-details-search/mpan-details-search.component.html
+++ b/src/app/pages/mpandetails/mpan-details-search/mpan-details-search.component.html
@@ -1,18 +1,30 @@
-<div class="col-lg-12 col-md-12 col-sm-12">
-    <div class="row">
-        <h5>Search MPAN</h5>
+<div class="row">
+    <div class="col-md-12">
+        <nb-card>
+            <nb-card-body>
+                <div class="flex-centered col-xl-4 col-lg-6 col-md-8 col-sm-12">
+                    <h2 class="title">Search For MPAN</h2>
+                    <nb-search type="rotate-layout"
+                               placeholder="Search MPAN .."
+                               hint="By ID/ Address/ "></nb-search>
+                </div>
+            </nb-card-body>
+        </nb-card>
     </div>
-    <div class="row">
-        <nb-search type="rotate-layout"
-                   placeholder="Search MPAN .."
-                   hint="By ID/ Address/ "></nb-search>
-    </div>
-    <div class="row">
-        <nav>
-            <a class="row" routerLink="./MPANID-12345" routerLinkActive="active">MPANID-12345</a>
-            <a class="row" routerLink="./MPANID-12345" routerLinkActive="active">MPANID-12345</a>
-            <a class="row" routerLink="./MPANID-12345" routerLinkActive="active">MPANID-12345</a>
-            <a class="row" routerLink="./MPANID-12345" routerLinkActive="active">MPANID-12345</a>
-        </nav>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <nb-card>
+            <nb-card-body>
+                <div class="col-xl-4 col-lg-6 col-md-8 col-sm-12">
+                    <nav>
+                        <a class="row" routerLink="./MPANID-12345" routerLinkActive="active">MPANID-12345</a>
+                        <a class="row" routerLink="./MPANID-12345" routerLinkActive="active">MPANID-12345</a>
+                        <a class="row" routerLink="./MPANID-12345" routerLinkActive="active">MPANID-12345</a>
+                        <a class="row" routerLink="./MPANID-12345" routerLinkActive="active">MPANID-12345</a>
+                    </nav>
+                </div>
+            </nb-card-body>
+        </nb-card>
     </div>
 </div>
