Remove centering on search icon

--- a/src/app/pages/mpandetails/mpan-details-search/mpan-details-search.component.html
+++ b/src/app/pages/mpandetails/mpan-details-search/mpan-details-search.component.html
@@ -2,8 +2,8 @@
     <div class="col-md-12">
         <nb-card>
             <nb-card-body>
-                <div class="flex-centered col-xl-4 col-lg-6 col-md-8 col-sm-12">
-                    <h2 class="title">Search For MPAN</h2>
+                <div class="col-xl-4 col-lg-6 col-md-8 col-sm-12">
+                    <!--<h2 class="title">Search For MPAN</h2>-->
                     <nb-search type="rotate-layout"
                                placeholder="Search MPAN .."
                                hint="By ID/ Address/ "></nb-search>
