--- a/src/app/pages/sitedetails/sitedetails.component.html
+++ b/src/app/pages/sitedetails/sitedetails.component.html
@@ -1,7 +1,1 @@
-<div class="col-md-12">
-    <div class="row">
-        <div class="col-md-12">
-            <ngx-site-details-form></ngx-site-details-form>
-        </div>
-    </div>
-</div>
+<router-outlet></router-outlet>
