--- a/src/app/pages/sitedetails/site-details-form/site-details-form.component.html
+++ b/src/app/pages/sitedetails/site-details-form/site-details-form.component.html
@@ -8,7 +8,11 @@
         <!--SITE DETAIL CARD-->
         <div class="col-md-12 col-lg-12 col-sm-12">
             <nb-card class="inline-form-card">
-                <nb-card-header>SITE/ SERVICE CABLE DETAILS SCREEN</nb-card-header>
+                <nb-card-header>
+                    SITE/ SERVICE CABLE DETAILS SCREEN
+                    <h6 class="text-warning"> {{ routed_id$ | async}}</h6>
+
+                </nb-card-header>
                 <nb-card-body>
                     <form class="form-inline" [formGroup]="form">
                         <div class="col-md-12">
