--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<h1 class="title text-info">
+<h1 class="title text-info slide-in">
     <nb-icon icon="flash-outline" status="success"></nb-icon>
     LDSO<span class="text-primary">-OnCloud </span>
 </h1>
