--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -3,7 +3,10 @@
 @include nb-install-component() {
   ::ng-deep router-outlet + * {
     display: block;
-    animation: fade 2s;
+    transform: translateX(50%);
+    -webkit-transform: translateX(50%);
+    animation: slide-in 1s forwards;
+    -webkit-animation: slide-in 1s forwards;
 
     @keyframes fade {
       from {
@@ -12,6 +15,18 @@
 
       to {
         opacity: 1;
+      }
+    }
+
+    @keyframes slide-in {
+      100% {
+        transform: translateX(0%);
+      }
+    }
+
+    @-webkit-keyframes slide-in {
+      100% {
+        -webkit-transform: translateX(0%);
       }
     }
   }
