--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -89,5 +89,5 @@
 </form>
 
 <section class="another-action" aria-label="Register">
-    Don't have an account? <a class="text-link" routerLink="../contact-us">contact-us @ EP-Tech Solutions</a>
+    Don't have an account? <a class="text-link" routerLink="../contact-us">contact-us @ ep-tech solutions</a>
 </section>
