--- a/src/app/@theme/components/header/header.component.scss
+++ b/src/app/@theme/components/header/header.component.scss
@@ -31,6 +31,28 @@
     display: flex;
     align-items: center;
     width: auto;
+    animation: fade 3s forwards;
+    -webkit-animation: fade 3s forwards;
+
+    @keyframes fade {
+      from {
+        opacity: 0;
+      }
+
+      to {
+        opacity: 1;
+      }
+    }
+
+    @-webkit-keyframes fade {
+      from {
+        opacity: 0;
+      }
+
+      to {
+        opacity: 1;
+      }
+    }
 
     .sidebar-toggle {
       @include nb-ltr(padding-right, 1.25rem);
