[WIP] cleanup + sperate styling for anim

--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -6,7 +6,7 @@
     </div>
 </div>
 <div class="header-container">
-    <a class="logo text-info" href="#" (click)="navigateHome()">
+    <a class="logo text-info hvr-float-shadow" href="#" (click)="navigateHome()">
         <nb-icon icon="flash-outline" status="success"></nb-icon>
         LDSO<span class="text-primary">-OnCloud </span>
     </a>
