--- a/src/app/pages/maincabledetails/main-cable-details-search/main-cable-details-search.component.html
+++ b/src/app/pages/maincabledetails/main-cable-details-search/main-cable-details-search.component.html
@@ -17,10 +17,18 @@
             <nb-card-body>
                 <div class="col-xl-4 col-lg-6 col-md-8 col-sm-12">
                     <nav>
-                        <a class="row" routerLink="./10EAST01-M01" routerLinkActive="active">10EAST01-M01</a>
-                        <a class="row" routerLink="./10EAST01-M01" routerLinkActive="active">10EAST01-M01</a>
-                        <a class="row" routerLink="./10EAST01-M01" routerLinkActive="active">10EAST01-M01</a>
-                        <a class="row" routerLink="./10EAST01-M01" routerLinkActive="active">10EAST01-M01</a>
+                        <div class="row>">
+                            <a class="hvr-grow" routerLink="./10EAST01-M01" routerLinkActive="active">10EAST01-M01</a>
+                        </div>
+                        <div class="row>">
+                            <a class="hvr-grow" routerLink="./10EAST01-M01" routerLinkActive="active">10EAST01-M01</a>
+                        </div>
+                        <div class="row>">
+                            <a class="hvr-grow" routerLink="./10EAST01-M01" routerLinkActive="active">10EAST01-M01</a>
+                        </div>
+                        <div class="row>">
+                            <a class="hvr-grow" routerLink="./10EAST01-M01" routerLinkActive="active">10EAST01-M01</a>
+                        </div>
                     </nav>
                 </div>
             </nb-card-body>
