--- a/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
+++ b/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
@@ -1,7 +1,9 @@
 <div class="col-md-12 col-lg-12 col-sm-12">
     <div class="row">
         <button (click)="onClickBack()"
-                ghost size="small" status="primary" nbButton> > back</button>
+                ghost size="small" status="primary"
+                class="hvr-bob" nbButton> > back
+        </button>
     </div>
     <div class="row">
         <!--MPAN DETAIL CARD-->
@@ -9,7 +11,7 @@
             <nb-card class="inline-form-card">
                 <nb-card-header>
                     METERING POINT DETAILS SCREEN
-                    <h6 class="text-success">  {{ routed_id$ | async}}</h6>
+                    <h6 class="text-success"> {{ routed_id$ | async}}</h6>
                 </nb-card-header>
                 <nb-card-body>
                     <form class="form-inline" [formGroup]="form">
@@ -113,7 +115,8 @@
                                                 <!--ADDRESS LINES-->
                                                 <div class="row">
                                                     <div class="form-group col-md-9">
-                                                        <label class="label col-sm-3 col-form-label">Metering address line 1</label>
+                                                        <label class="label col-sm-3 col-form-label">Metering address
+                                                            line 1</label>
                                                         <div class="col-sm-9">
                                                             <input type="text"
                                                                    class="input-full-width size-medium shape-rectangle"
@@ -125,7 +128,8 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="form-group col-md-9">
-                                                        <label class="label col-sm-3 col-form-label">Metering address line 2</label>
+                                                        <label class="label col-sm-3 col-form-label">Metering address
+                                                            line 2</label>
                                                         <div class="col-sm-9">
                                                             <input type="text"
                                                                    class="input-full-width size-medium shape-rectangle"
@@ -137,7 +141,8 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="form-group col-md-9">
-                                                        <label class="label col-sm-3 col-form-label">Metering address line 3</label>
+                                                        <label class="label col-sm-3 col-form-label">Metering address
+                                                            line 3</label>
                                                         <div class="col-sm-9">
                                                             <input type="text"
                                                                    class="input-full-width size-medium shape-rectangle"
@@ -149,7 +154,8 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="form-group col-md-9">
-                                                        <label class="label col-sm-3 col-form-label">Metering address line 4</label>
+                                                        <label class="label col-sm-3 col-form-label">Metering address
+                                                            line 4</label>
                                                         <div class="col-sm-9">
                                                             <input type="text"
                                                                    class="input-full-width size-medium shape-rectangle"
@@ -161,7 +167,8 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="form-group col-md-9">
-                                                        <label class="label col-sm-3 col-form-label">Metering address line 5</label>
+                                                        <label class="label col-sm-3 col-form-label">Metering address
+                                                            line 5</label>
                                                         <div class="col-sm-9">
                                                             <input type="text"
                                                                    class="input-full-width size-medium shape-rectangle"
@@ -173,7 +180,8 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="form-group col-md-9">
-                                                        <label class="label col-sm-3 col-form-label">Metering address line 6</label>
+                                                        <label class="label col-sm-3 col-form-label">Metering address
+                                                            line 6</label>
                                                         <div class="col-sm-9">
                                                             <input type="text"
                                                                    class="input-full-width size-medium shape-rectangle"
@@ -185,7 +193,8 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="form-group col-md-9">
-                                                        <label class="label col-sm-3 col-form-label">Metering address line 7</label>
+                                                        <label class="label col-sm-3 col-form-label">Metering address
+                                                            line 7</label>
                                                         <div class="col-sm-9">
                                                             <input type="text"
                                                                    class="input-full-width size-medium shape-rectangle"
