--- a/src/app/pages/sitedetails/site-details-search/site-details-search.component.html
+++ b/src/app/pages/sitedetails/site-details-search/site-details-search.component.html
@@ -6,7 +6,8 @@
                     <!--<h2 class="title">Search For ..</h2>-->
                     <nb-search type="rotate-layout"
                                placeholder="Search for Site Details .."
-                               hint="By ID/ Address/ "></nb-search>
+                               hint="By ID/ Address/ "
+                               class="hvr-grow"></nb-search>
                 </div>
             </nb-card-body>
         </nb-card>
@@ -18,10 +19,18 @@
             <nb-card-body>
                 <div class="col-xl-4 col-lg-6 col-md-8 col-sm-12">
                     <nav>
-                        <a class="row" routerLink="./PENL10010" routerLinkActive="active">PENL10010</a>
-                        <a class="row" routerLink="./PENL10010" routerLinkActive="active">PENL10010</a>
-                        <a class="row" routerLink="./PENL10010" routerLinkActive="active">PENL10010</a>
-                        <a class="row" routerLink="./PENL10010" routerLinkActive="active">PENL10010</a>
+                        <div class="row">
+                            <a class="hvr-grow" routerLink="./PENL10010" routerLinkActive="active">PENL10010</a>
+                        </div>
+                        <div class="row">
+                            <a class="hvr-grow" routerLink="./PENL10010" routerLinkActive="active">PENL10010</a>
+                        </div>
+                        <div class="row">
+                            <a class="hvr-grow" routerLink="./PENL10010" routerLinkActive="active">PENL10010</a>
+                        </div>
+                        <div class="row">
+                            <a class="hvr-grow" routerLink="./PENL10010" routerLinkActive="active">PENL10010</a>
+                        </div>
                     </nav>
                 </div>
             </nb-card-body>
