--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -1,22 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap');
-
 // themes - our custom or/and out of the box themes
 @import 'themes';
-
 // framework component themes (styles tied to theme variables)
 @import '~@nebular/theme/styles/globals';
 @import '~@nebular/auth/styles/all';
-
 @import '~bootstrap/scss/functions';
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
 @import '~bootstrap/scss/grid';
-
 // loading progress bar theme
 @import './pace.theme';
-
 @import './layout';
 @import './overrides';
+//
+@import './anim.style';
 
 // install the framework and custom global styles
 @include nb-install() {
@@ -30,4 +27,7 @@
   @include ngx-pace-theme();
 
   @include nb-overrides();
-};
+
+}
+
+;
