--- a/src/app/pages/maincabledetails/main-cable-details-form/main-cable-details-form.component.html
+++ b/src/app/pages/maincabledetails/main-cable-details-form/main-cable-details-form.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-12 col-lg-12 col-sm-12">
     <div class="row">
-        <button (click)="onClickBack()"
+        <button (click)="onClickBack()" class="hvr-bob"
                 ghost size="small" status="primary" nbButton> > back
         </button>
     </div>
