--- a/src/app/pages/sitedetails/site-details-form/site-details-form.component.html
+++ b/src/app/pages/sitedetails/site-details-form/site-details-form.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 col-lg-12 col-sm-12">
     <div class="row">
         <button (click)="onClickBack()"
-                ghost size="small" status="primary" nbButton> > back
+                ghost size="small" status="primary" class="hvr-bob" nbButton> > back
         </button>
     </div>
     <div class="row">
