Cleanup menu items + nav mpan 2 asset details

--- a/src/app/pages/mpandetails/bulk-import/bulk-import.component.html
+++ b/src/app/pages/mpandetails/bulk-import/bulk-import.component.html
@@ -8,7 +8,7 @@
         <!--Bulk Upload MPAN Details-->
         <!--</button>-->
         <div class="row">
-            <form [formGroup]="form" (ngSubmit)="onSubmit()">
+            <form (ngSubmit)="onSubmit()">
 
                 <input type="file"
                        class="input-full-width status-warning size-medium shape-semi-round"
