--- a/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
+++ b/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
@@ -794,8 +794,35 @@
                                         </div>
                                     </div>
                                 </div>
-
+                                <hr>
                                 <div class="row">
+                                    <h6 class="text-warning"> RELATED MPAN(s)</h6>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6 offset-3">
+                                        <nav>
+                                            <div class="row">
+                                                <a class="hvr-grow" routerLink="../3000311842220"
+                                                   routerLinkActive="active">MPAN -- 3000311842220</a>
+                                            </div>
+                                            <div class="row">
+                                                <a class="hvr-grow" routerLink="../3007428567721"
+                                                   routerLinkActive="active">MPAN -- 3007428567721</a>
+                                            </div>
+                                            <div class="row">
+                                                <a class="hvr-grow" routerLink="../3038647382451"
+                                                   routerLinkActive="active">MPAN -- 3038647382451</a>
+                                            </div>
+                                            <div class="row">
+                                                <a class="hvr-grow" routerLink="../3052869536957"
+                                                   routerLinkActive="active">MPAN -- 3052869536957</a>
+                                            </div>
+                                            <div class="row">
+                                                <a class="hvr-grow" routerLink="../3062232292802"
+                                                   routerLinkActive="active">MPAN -- 3062232292802</a>
+                                            </div>
+                                        </nav>
+                                    </div>
                                 </div>
                             </div>
                         </form>
