--- a/src/app/pages/mpandetails/mpan-details-search/mpan-details-search.component.html
+++ b/src/app/pages/mpandetails/mpan-details-search/mpan-details-search.component.html
@@ -16,20 +16,26 @@
 <div class="row">
     <div class="col-md-12">
         <nb-card>
+            <nb-card-header>
+                <h6 class="text-muted"> search results .. </h6>
+            </nb-card-header>
             <nb-card-body>
-                <div class="col-xl-4 col-lg-6 col-md-8 col-sm-12">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                     <nav>
                         <div class="row">
-                            <a class="hvr-grow" routerLink="./MPANID-12345" routerLinkActive="active">MPANID-12345</a>
+                            <a class="hvr-grow" routerLink="./3000311842220" routerLinkActive="active">MPAN -- 3000311842220</a>
                         </div>
                         <div class="row">
-                            <a class="hvr-grow" routerLink="./MPANID-12345" routerLinkActive="active">MPANID-12345</a>
+                            <a class="hvr-grow" routerLink="./3007428567721" routerLinkActive="active">MPAN -- 3007428567721</a>
                         </div>
                         <div class="row">
-                            <a class="hvr-grow" routerLink="./MPANID-12345" routerLinkActive="active">MPANID-12345</a>
+                            <a class="hvr-grow" routerLink="./3038647382451" routerLinkActive="active">MPAN -- 3038647382451</a>
                         </div>
                         <div class="row">
-                            <a class="hvr-grow" routerLink="./MPANID-12345" routerLinkActive="active">MPANID-12345</a>
+                            <a class="hvr-grow" routerLink="./3052869536957" routerLinkActive="active">MPAN -- 3052869536957</a>
+                        </div>
+                        <div class="row">
+                            <a class="hvr-grow" routerLink="./3062232292802" routerLinkActive="active">MPAN -- 3062232292802</a>
                         </div>
                     </nav>
                 </div>
