--- a/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
+++ b/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
@@ -12,36 +12,48 @@
                     <nb-tab tabTitle="MPAN Details" tabIcon="file-text-outline" responsive>
                         <form class="form-inline" [formGroup]="form">
                             <div class="col-md-12">
+                                <div class="row">
+                                    <div class="mpan-box">
+                                        <span class="text-basic h3">MPAN #</span>
+                                        <span class="text-primary h3">{{routed_id$ | async}}</span>
+                                    </div>
+                                </div>
+                                <hr>
                                 <!--FIRST ROW - MAIN DETAILS-->
                                 <div class="row">
-                                    <div class="form-group col-md-5">
-                                        <label class="label col-sm-3 col-form-label">MPAN ID</label>
-                                        <div class="col-sm-9">
-                                            <input type="text"
-                                                   class="input-full-width status-warning size-medium shape-semi-round"
-                                                   nbInput fullWidth readonly
-                                                   placeholder="MPAN ID"
-                                                   formControlName="id">
-                                        </div>
-                                    </div>
-                                    <div class="form-group col-md-7">
+                                    <!--<div class="form-group col-md-6">-->
+                                        <!--<label class="label col-sm-3 col-form-label">MPAN ID</label>-->
+                                        <!--<div class="col-sm-9">-->
+                                            <!--<input type="text"-->
+                                                   <!--class="input-full-width status-warning size-medium shape-semi-round"-->
+                                                   <!--nbInput fullWidth readonly-->
+                                                   <!--placeholder="MPAN ID"-->
+                                                   <!--formControlName="id">-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                    <div class="form-group col-md-6">
                                         <label class="label col-sm-3">Customer Name</label>
                                         <div class="col-sm-9">
                                             <input type="text"
                                                    class="input-full-width size-medium shape-semi-round"
-                                                   nbInput fullWidth
+                                                   nbInput fullWidth [readonly]="20 > 10"
                                                    placeholder="Customer Name">
                                         </div>
+                                    </div>
+                                    <div class="form-group col-md-6">
                                     </div>
                                 </div>
                                 <!--SECOND ROW - ENERGISATION DETAILS-->
                                 <div class="row" [formGroup]="form.get('energisation')">
                                     <div class="form-group col-md-6">
-                                        <label class="label col-sm-3 col-form-label">Energisation Status</label>
+                                        <label class="label col-sm-3 col-form-label">
+                                            Energisation Status</label>
                                         <div class="col-sm-9">
                                             <input type="text"
                                                    class="input-full-width size-medium shape-semi-round"
                                                    nbInput fullWidth
+                                                   nbTooltip="Energisation status can be between x, y, & z"
+                                                   nbTooltipStatus="info"
                                                    placeholder="status"
                                                    formControlName="state_fk">
                                         </div>
@@ -714,9 +726,9 @@
                         <form class="form-inline">
                             <div class="col-md-12">
                                 <div class="row" [formGroup]="form.get('asset')">
-                                    <!--FIRST ROW - ASSET DETAILS-->
+                                    <!--ASSET DETAILS-->
                                     <div class="row">
-                                        <div class="form-group col-md-5">
+                                        <div class="form-group col-md-6">
                                             <label class="label col-sm-3 col-form-label">Business Ref ID</label>
                                             <div class="col-sm-9">
                                                 <input type="text"
@@ -726,7 +738,7 @@
                                                        formControlName="business_reference">
                                             </div>
                                         </div>
-                                        <div class="form-group col-md-7">
+                                        <div class="form-group col-md-6">
                                             <label class="label col-sm-3">Description</label>
                                             <div class="col-sm-9">
                                                 <input type="text"
@@ -736,10 +748,7 @@
                                                        formControlName="description">
                                             </div>
                                         </div>
-                                    </div>
-                                    <!--PLOT REF-->
-                                    <div class="row">
-                                        <div class="form-group col-md-4">
+                                        <div class="form-group col-md-6">
                                             <label class="label col-sm-3 col-form-label">Plot Number</label>
                                             <div class="col-sm-9">
                                                 <input type="text"
@@ -749,7 +758,7 @@
                                                        formControlName="plot_number">
                                             </div>
                                         </div>
-                                        <div class="form-group col-md-4">
+                                        <div class="form-group col-md-6">
                                             <label class="label col-sm-3">Property Type</label>
                                             <div class="col-sm-9">
                                                 <input type="text"
@@ -759,7 +768,7 @@
                                                        formControlName="property_type">
                                             </div>
                                         </div>
-                                        <div class="form-group col-md-4">
+                                        <div class="form-group col-md-6">
                                             <label class="label col-sm-3">Reference to plan</label>
                                             <div class="col-sm-9">
                                                 <input type="text"
@@ -769,10 +778,7 @@
                                                        formControlName="reference_to_plan">
                                             </div>
                                         </div>
-                                    </div>
-                                    <!--VOLTAGE REF-->
-                                    <div class="row">
-                                        <div class="form-group col-md-5">
+                                        <div class="form-group col-md-6">
                                             <label class="label col-sm-3 col-form-label">Supply Capacity</label>
                                             <div class="col-sm-9">
                                                 <input type="text"
@@ -782,7 +788,7 @@
                                                        formControlName="supply_capacity">
                                             </div>
                                         </div>
-                                        <div class="form-group col-md-5">
+                                        <div class="form-group col-md-6">
                                             <label class="label col-sm-3">Supply Voltage</label>
                                             <div class="col-sm-9">
                                                 <input type="text"
@@ -799,29 +805,27 @@
                                     <h6 class="text-warning"> RELATED MPAN(s)</h6>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-6 offset-3">
-                                        <nav>
-                                            <div class="row">
-                                                <a class="hvr-grow" routerLink="../3000311842220"
-                                                   routerLinkActive="active">MPAN -- 3000311842220</a>
-                                            </div>
-                                            <div class="row">
-                                                <a class="hvr-grow" routerLink="../3007428567721"
-                                                   routerLinkActive="active">MPAN -- 3007428567721</a>
-                                            </div>
-                                            <div class="row">
-                                                <a class="hvr-grow" routerLink="../3038647382451"
-                                                   routerLinkActive="active">MPAN -- 3038647382451</a>
-                                            </div>
-                                            <div class="row">
-                                                <a class="hvr-grow" routerLink="../3052869536957"
-                                                   routerLinkActive="active">MPAN -- 3052869536957</a>
-                                            </div>
-                                            <div class="row">
-                                                <a class="hvr-grow" routerLink="../3062232292802"
-                                                   routerLinkActive="active">MPAN -- 3062232292802</a>
-                                            </div>
-                                        </nav>
+                                    <div class="col-md-6 offset-1">
+                                        <div class="row">
+                                            <a class="hvr-grow" routerLink="../3000311842220"
+                                               routerLinkActive="active">MPAN -- 3000311842220</a>
+                                        </div>
+                                        <div class="row">
+                                            <a class="hvr-grow" routerLink="../3007428567721"
+                                               routerLinkActive="active">MPAN -- 3007428567721</a>
+                                        </div>
+                                        <div class="row">
+                                            <a class="hvr-grow" routerLink="../3038647382451"
+                                               routerLinkActive="active">MPAN -- 3038647382451</a>
+                                        </div>
+                                        <div class="row">
+                                            <a class="hvr-grow" routerLink="../3052869536957"
+                                               routerLinkActive="active">MPAN -- 3052869536957</a>
+                                        </div>
+                                        <div class="row">
+                                            <a class="hvr-grow" routerLink="../3062232292802"
+                                               routerLinkActive="active">MPAN -- 3062232292802</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
