Setup routing from dashboard

--- a/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.scss
+++ b/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.scss
@@ -17,9 +17,7 @@ nb-card.inline-form-card nb-card-body {
   text-align: right;
 }
 
-.mpan-box {
-  display: flex;
-  align-items: center;
-  width: auto;
+.ref-id-container {
+  margin: 0 auto;
 }
 
