--- a/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
+++ b/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
@@ -12,10 +12,13 @@
                     <nb-tab tabTitle="MPAN Details" tabIcon="file-text-outline" responsive>
                         <form class="form-inline" [formGroup]="form">
                             <div class="col-md-12">
+                                <!--HEADER ROW-->
                                 <div class="row">
-                                    <div class="mpan-box">
+                                    <div class="ref-id-container">
                                         <span class="text-basic h3">MPAN #</span>
-                                        <span class="text-primary h3">{{routed_id$ | async}}</span>
+                                        <span class="text-primary h3">
+                                            {{ form.getRawValue()['id'] }}
+                                        </span>
                                     </div>
                                 </div>
                                 <hr>
@@ -199,7 +202,7 @@
                                     </div>
                                 </div>
                                 <hr>
-                                <!--ADDRESSES ROW-->
+                                <!--ROW TABSET-->
                                 <div class="row">
                                     <!--TABS-->
                                     <nb-tabset fullWidth>
@@ -545,7 +548,7 @@
                                     </nb-tabset>
                                 </div>
                                 <hr>
-                                <!--FOURTH ROW - METERING DETAILS-->
+                                <!--UNMETRED / EXPORTS/ ..-->
                                 <div class="row">
                                     <div class="form-group col-md-4">
                                         <nb-checkbox
@@ -771,79 +774,85 @@
                     </nb-tab>
                     <nb-tab tabTitle="ASSET Details" tabIcon="file-text-outline" responsive>
                         <form class="form-inline">
-                            <div class="col-md-12">
-                                <div class="row" [formGroup]="form.get('asset')">
-                                    <!--ASSET DETAILS-->
-                                    <div class="row">
-                                        <div class="form-group col-md-6">
-                                            <label class="label col-sm-3 col-form-label">Business Ref ID</label>
-                                            <div class="col-sm-9">
-                                                <input type="text"
-                                                       class="input-full-width status-warning size-medium shape-semi-round"
-                                                       nbInput fullWidth readonly
-                                                       placeholder="Ref ID.."
-                                                       formControlName="business_reference">
-                                            </div>
+                            <div class="col-md-12" [formGroup]="form.get('asset')">
+                                <div class="row">
+                                    <div class="ref-id-container">
+                                        <span class="text-basic h3">Business Ref #</span>
+                                        <span class="text-primary h3">
+                                            {{ form.getRawValue()['asset']['business_reference'] }}
+                                        </span>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="form-group col-md-6">
+                                        <label class="label col-sm-3 col-form-label">Business Ref ID</label>
+                                        <div class="col-sm-9">
+                                            <input type="text"
+                                                   class="input-full-width status-warning size-medium shape-semi-round"
+                                                   nbInput fullWidth
+                                                   placeholder="Ref ID.."
+                                                   formControlName="business_reference">
                                         </div>
-                                        <div class="form-group col-md-6">
-                                            <label class="label col-sm-3">Description</label>
-                                            <div class="col-sm-9">
-                                                <input type="text"
-                                                       class="input-full-width size-medium shape-semi-round"
-                                                       nbInput fullWidth
-                                                       placeholder="description"
-                                                       formControlName="description">
-                                            </div>
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label class="label col-sm-3">Description</label>
+                                        <div class="col-sm-9">
+                                            <input type="text"
+                                                   class="input-full-width size-medium shape-semi-round"
+                                                   nbInput fullWidth
+                                                   placeholder="description"
+                                                   formControlName="description">
                                         </div>
-                                        <div class="form-group col-md-6">
-                                            <label class="label col-sm-3 col-form-label">Plot Number</label>
-                                            <div class="col-sm-9">
-                                                <input type="text"
-                                                       class="input-full-width status-warning size-medium shape-semi-round"
-                                                       nbInput fullWidth readonly
-                                                       placeholder=".."
-                                                       formControlName="plot_number">
-                                            </div>
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label class="label col-sm-3 col-form-label">Plot Number</label>
+                                        <div class="col-sm-9">
+                                            <input type="text"
+                                                   class="input-full-width status-warning size-medium shape-semi-round"
+                                                   nbInput fullWidth
+                                                   placeholder=".."
+                                                   formControlName="plot_number">
                                         </div>
-                                        <div class="form-group col-md-6">
-                                            <label class="label col-sm-3">Property Type</label>
-                                            <div class="col-sm-9">
-                                                <input type="text"
-                                                       class="input-full-width size-medium shape-semi-round"
-                                                       nbInput fullWidth
-                                                       placeholder=""
-                                                       formControlName="property_type">
-                                            </div>
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label class="label col-sm-3">Property Type</label>
+                                        <div class="col-sm-9">
+                                            <input type="text"
+                                                   class="input-full-width size-medium shape-semi-round"
+                                                   nbInput fullWidth
+                                                   placeholder=""
+                                                   formControlName="property_type">
                                         </div>
-                                        <div class="form-group col-md-6">
-                                            <label class="label col-sm-3">Reference to plan</label>
-                                            <div class="col-sm-9">
-                                                <input type="text"
-                                                       class="input-full-width size-medium shape-semi-round"
-                                                       nbInput fullWidth
-                                                       placeholder=""
-                                                       formControlName="reference_to_plan">
-                                            </div>
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label class="label col-sm-3">Reference to plan</label>
+                                        <div class="col-sm-9">
+                                            <input type="text"
+                                                   class="input-full-width size-medium shape-semi-round"
+                                                   nbInput fullWidth
+                                                   placeholder=""
+                                                   formControlName="reference_to_plan">
                                         </div>
-                                        <div class="form-group col-md-6">
-                                            <label class="label col-sm-3 col-form-label">Supply Capacity</label>
-                                            <div class="col-sm-9">
-                                                <input type="text"
-                                                       class="input-full-width status-warning size-medium shape-semi-round"
-                                                       nbInput fullWidth readonly
-                                                       placeholder=".."
-                                                       formControlName="supply_capacity">
-                                            </div>
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label class="label col-sm-3 col-form-label">Supply Capacity</label>
+                                        <div class="col-sm-9">
+                                            <input type="text"
+                                                   class="input-full-width status-warning size-medium shape-semi-round"
+                                                   nbInput fullWidth
+                                                   placeholder=".."
+                                                   formControlName="supply_capacity">
                                         </div>
-                                        <div class="form-group col-md-6">
-                                            <label class="label col-sm-3">Supply Voltage</label>
-                                            <div class="col-sm-9">
-                                                <input type="text"
-                                                       class="input-full-width size-medium shape-semi-round"
-                                                       nbInput fullWidth
-                                                       placeholder=""
-                                                       formControlName="supply_voltage">
-                                            </div>
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label class="label col-sm-3">Supply Voltage</label>
+                                        <div class="col-sm-9">
+                                            <input type="text"
+                                                   class="input-full-width size-medium shape-semi-round"
+                                                   nbInput fullWidth
+                                                   placeholder=""
+                                                   formControlName="supply_voltage">
                                         </div>
                                     </div>
                                 </div>
