Address component abstraction

--- a/src/app/@common-components/forms/asset-details-form/asset-details-form.component.html
+++ b/src/app/@common-components/forms/asset-details-form/asset-details-form.component.html
@@ -89,141 +89,9 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <form [formGroup]="form.get('address')">
-                    <!--ADDRESS LINES-->
-                    <div class="form-group col-md-9">
-                        <label class="label col-sm-3 col-form-label">
-                            Address Type</label>
-                        <div class="col-sm-9">
-                            <input type="text"
-                                   class="input-full-width size-medium shape-rectangle"
-                                   nbInput fullWidth
-                                   placeholder=""
-                                   formControlName="address_type">
-                        </div>
-                    </div>
-                    <div class="form-group col-md-9">
-                        <label class="label col-sm-3 col-form-label">
-                            line 1</label>
-                        <div class="col-sm-9">
-                            <input type="text"
-                                   class="input-full-width size-medium shape-rectangle"
-                                   nbInput fullWidth
-                                   placeholder=""
-                                   formControlName="address_1">
-                        </div>
-                    </div>
-                    <div class="form-group col-md-9">
-                        <label class="label col-sm-3 col-form-label">
-                            line 2</label>
-                        <div class="col-sm-9">
-                            <input type="text"
-                                   class="input-full-width size-medium shape-rectangle"
-                                   nbInput fullWidth
-                                   placeholder=""
-                                   formControlName="address_2">
-                        </div>
-                    </div>
-                    <div class="form-group col-md-9">
-                        <label class="label col-sm-3 col-form-label">
-                            line 3</label>
-                        <div class="col-sm-9">
-                            <input type="text"
-                                   class="input-full-width size-medium shape-rectangle"
-                                   nbInput fullWidth
-                                   placeholder=""
-                                   formControlName="address_3">
-                        </div>
-                    </div>
-                    <div class="form-group col-md-9">
-                        <label class="label col-sm-3 col-form-label">
-                            line 4</label>
-                        <div class="col-sm-9">
-                            <input type="text"
-                                   class="input-full-width size-medium shape-rectangle"
-                                   nbInput fullWidth
-                                   placeholder=""
-                                   formControlName="address_4">
-                        </div>
-                    </div>
-                    <div class="form-group col-md-9">
-                        <label class="label col-sm-3 col-form-label">
-                            line 5</label>
-                        <div class="col-sm-9">
-                            <input type="text"
-                                   class="input-full-width size-medium shape-rectangle"
-                                   nbInput fullWidth
-                                   placeholder=""
-                                   formControlName="address_5">
-                        </div>
-                    </div>
-                    <div class="form-group col-md-9">
-                        <label class="label col-sm-3 col-form-label">
-                            line 6</label>
-                        <div class="col-sm-9">
-                            <input type="text"
-                                   class="input-full-width size-medium shape-rectangle"
-                                   nbInput fullWidth
-                                   placeholder=""
-                                   formControlName="address_6">
-                        </div>
-                    </div>
-                    <div class="form-group col-md-9">
-                        <label class="label col-sm-3 col-form-label">
-                            line 7</label>
-                        <div class="col-sm-9">
-                            <input type="text"
-                                   class="input-full-width size-medium shape-rectangle"
-                                   nbInput fullWidth
-                                   placeholder=""
-                                   formControlName="address_7">
-                        </div>
-                    </div>
-                    <div class="form-group col-md-9">
-                        <label class="label col-sm-3 col-form-label">
-                            line 8</label>
-                        <div class="col-sm-9">
-                            <input type="text"
-                                   class="input-full-width size-medium shape-rectangle"
-                                   nbInput fullWidth
-                                   placeholder=""
-                                   formControlName="address_8">
-                        </div>
-                    </div>
-                    <div class="form-group col-md-9">
-                        <label class="label col-sm-3 col-form-label">
-                            line 9</label>
-                        <div class="col-sm-9">
-                            <input type="text"
-                                   class="input-full-width size-medium shape-rectangle"
-                                   nbInput fullWidth
-                                   placeholder=""
-                                   formControlName="address_9">
-                        </div>
-                    </div>
-                    <div class="form-group col-md-9">
-                        <label class="label col-sm-3 col-form-label">Post
-                            Code</label>
-                        <div class="col-sm-9">
-                            <input type="text"
-                                   class="input-full-width size-medium shape-rectangle"
-                                   nbInput fullWidth
-                                   placeholder=""
-                                   formControlName="post_code">
-                        </div>
-                    </div>
-                    <div class="form-group col-md-9">
-                        <label class="label col-sm-3 col-form-label">Date Effective
-                            From</label>
-                        <div class="col-sm-9">
-                            <input type="text"
-                                   class="input-full-width size-medium shape-rectangle"
-                                   nbInput fullWidth
-                                   placeholder=""
-                                   formControlName="effective_from">
-                        </div>
-                    </div>
-                </form>
+                <ngx-address-form
+                        [form]="form.get('address')"
+                        [isReadOnly]="false"></ngx-address-form>
             </div>
         </div>
     </div>
