Allow actions on form view

--- a/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
+++ b/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
@@ -2,7 +2,23 @@
     <div class="row">
         <button (click)="onClickBack()"
                 ghost size="small" status="primary"
-                class="hvr-bob" nbButton> > back
+                class="hvr-bob" nbButton>
+            <nb-icon icon="home-outline" status="primary" ></nb-icon>Home
+        </button>
+        <button (click)="onClickBack()"
+                ghost size="small" status="primary"
+                class="hvr-bob" nbButton>
+            <nb-icon icon="arrowhead-left-outline" status="primary" ></nb-icon>Back
+        </button>
+        <button (click)="onClickBack()"
+                ghost size="small" status="primary"
+                class="hvr-bob" nbButton>
+            <nb-icon icon="save-outline" status="danger" ></nb-icon>Save
+        </button>
+        <button (click)="onClickBack()"
+                ghost size="small" status="primary"
+                class="hvr-bob" nbButton>
+            <nb-icon icon="refresh-outline" status="primary" ></nb-icon>Reset
         </button>
     </div>
     <div class="row">
