[WIP] Integration with flask app + setup proxu re-routing

--- a/src/app/pages/mpandetails/mpan-details-search/mpan-details-search.component.html
+++ b/src/app/pages/mpandetails/mpan-details-search/mpan-details-search.component.html
@@ -30,7 +30,7 @@
                                 <span class="col-md-4"> ADDRESS </span>
                             </div>
                         </nb-list-item>
-                        <nb-list-item class="" *ngFor="let mpan of searchMpanResults.result">
+                        <nb-list-item class="" *ngFor="let mpan of searchMpanResults.mpans">
                             <div class="row">
                                 <span class="col-md-4">
                                     <a class="hvr-grow"
